--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -14,7 +14,7 @@ jobs:
         ruby-version: '${{ steps.ruby-version.outputs.VERSION }}'
     - name: Generate indexes
       run: ruby mkindex.rb
-    - name: Commit report
+    - name: Commit generated indexes
       uses: EndBug/add-and-commit@v7
       with:
         default_author: github_actions
