--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-autopep8==2.0.1
-importlib-metadata==6.0.0
+autopep8==2.0.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
+colorclass==2.2.2
+docopt==0.6.2
+idna==3.4
+importlib-metadata==6.6.0
 Jinja2==3.1.2
-Markdown==3.4.1
+Markdown==3.4.3
 MarkupSafe==2.1.2
+packaging==23.1
+pip-upgrader==1.4.15
 py-gfm==2.0.0
 pycodestyle==2.10.0
 pytz==2022.7.1
+requests==2.30.0
+terminaltables==3.1.10
 tomli==2.0.1
-zipp==3.12.0
+urllib3==2.0.2
+zipp==3.15.0
