add social logos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "cSpell.words": [
         "Maeda",
         "Michinobu",
+        "mixi",
+        "mixnb",
+        "nohighlight",
+        "pytz",
         "tailwindcss"
     ]
 }
