--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Firestore",
         "Maeda",
         "Michinobu",
+        "Misskey",
         "mixi",
         "mixnb",
         "nohighlight",
