Port build.py to build.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,27 @@
 {
-    "cSpell.words": [
-        "autopep",
-        "certifi",
-        "colorclass",
-        "docopt",
-        "Firestore",
-        "idna",
-        "Maeda",
-        "Michinobu",
-        "Misskey",
-        "mixi",
-        "mixnb",
-        "nohighlight",
-        "pycodestyle",
-        "pytz",
-        "tailwindcss",
-        "terminaltables",
-        "tomli",
-        "upgrader",
-        "urllib",
-        "zipp"
-    ]
+  "cSpell.words": [
+    "autopep",
+    "certifi",
+    "colorclass",
+    "docopt",
+    "Firestore",
+    "idna",
+    "Maeda",
+    "Michinobu",
+    "Misskey",
+    "mixi",
+    "mixnb",
+    "nohighlight",
+    "nvmrc",
+    "pycodestyle",
+    "pytz",
+    "tailwindcss",
+    "terminaltables",
+    "tomli",
+    "upgrader",
+    "urllib",
+    "zipp"
+  ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
