--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Static site generator for me",
   "type": "module",
   "scripts": {
-    "build": "node build.js",
-    "start": "npx http-server _site -p 8000",
+    "build": "vite build",
+    "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +23,7 @@
     "mustache": "^4.2.0"
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "vite": "^7.2.7"
   }
 }
